fix: fix x axis overflow

--- a/frontend/static/config.css
+++ b/frontend/static/config.css
@@ -39,6 +39,7 @@
 
 .display-small-preview-container {
   aspect-ratio: 16 / 9;
+  overflow: hidden;
 }
 
 span.button-icon {
